Revert "prevent text wrapping in table vis3"
This reverts commit 21fca10b10bf759b649a5409965af4b4f6f5c3cb.

--- a/css/harvest-map.css
+++ b/css/harvest-map.css
@@ -93,7 +93,6 @@ td.indented
   margin-right:0%;
   margin-top: 0%;*/
   margin-top: 100px;
-	white-space: nowrap;
 	
 }
 .table1{
